# power-term

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package.json  vite.config.ts
.commandcode/taste/: taste.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: README.instructions.md
.github/workflows/: ci.yml  release.yml
.superpowers/brainstorm/24985-1777429127/content/: colors.html  direction.html  full-mockup.html  panel-behavior.html
.superpowers/brainstorm/24985-1777429127/state/: server-stopped
.superpowers/brainstorm/37607-1777389721/content/: layouts.html  settings-modal.html  themes.html
.superpowers/brainstorm/37607-1777389721/state/: server-stopped
.superpowers/brainstorm/76189-1777394495/content/: architecture.html
.superpowers/brainstorm/76189-1777394495/state/: server-stopped
docs/superpowers/plans/: 2026-04-27-core-mvp.md  2026-04-27-host-store-2b.md  2026-04-27-ssh-connect-2a.md  2026-04-28-cloud-sync-6.md  2026-04-28-forwards-4b.md  2026-04-28-polish-5.md  2026-04-28-sftp-3.md  2026-04-28-snippets-4a.md  2026-04-29-macos-native-ui.md
docs/superpowers/specs/: 2026-04-27-core-mvp-design.md  2026-04-27-host-store-2b-design.md  2026-04-27-ssh-connect-2a-design.md  2026-04-28-cloud-sync-6-design.md  2026-04-28-forwards-4b-design.md  2026-04-28-polish-5-design.md  2026-04-28-sftp-3-design.md  2026-04-28-snippets-4a-design.md  2026-04-29-macos-native-ui-design.md
scripts/: release.sh
src/: App.tsx  main.tsx  styles.css  themes.test.ts  themes.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/db/: manager.rs  mod.rs  proxy.rs  session.rs
src-tauri/src/pty/: manager.rs  mod.rs  session.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/sftp/: manager.rs  mod.rs  session.rs
src-tauri/src/ssh/: auth.rs  forward_manager.rs  forwards.rs  handshake.rs  known_hosts.rs  manager.rs  mod.rs  session.rs
src-tauri/src/store/: db.rs  db_connections.rs  forwards.rs  host.rs  mod.rs  schema.rs  secrets.rs  snippets.rs  ssh_keys.rs  tags.rs
src-tauri/src/sync/: auth.rs  client.rs  encrypt.rs  mod.rs  pull.rs  push.rs
src-tauri/tests/fixtures/: id_ed25519_plain  id_ed25519_plain.pub  known_hosts_sample.txt
src/client/common/: constants.js
src/client/components/footer/: footer-entry.jsx  footer.styl
src/client/components/layout/: layout.jsx
src/client/components/quick-commands/: qm.styl  quick-commands-box.jsx
src/client/components/setting-panel/: setting-wrap.styl  setting.styl
src/client/css/: basic.styl
src/components/: AICommandBar.tsx  AISettingsTab.tsx  AccentDock.tsx  AppIcons.tsx  AuthPrompt.tsx  CommandPalette.test.tsx  CommandPalette.tsx  ConfirmModal.tsx  ContextMenu.tsx  DbBrowser.tsx  DbConnectingModal.tsx  DbConnectionFormModal.tsx  DbConnectionsPanel.tsx  DbPasswordPrompt.tsx  DbSshPassphrasePrompt.tsx  FileBrowser.test.tsx  FileBrowser.tsx  FileRow.test.tsx  FileRow.tsx  ForwardFormModal.test.tsx  ForwardFormModal.tsx  ForwardsPanel.test.tsx  ForwardsPanel.tsx  HostFingerprintPrompt.tsx  HostFormModal.test.tsx  HostFormModal.tsx  IconRail.tsx  KeyFormModal.tsx  KeysPanel.tsx  LocalBrowser.tsx  QuickThemePanel.tsx  SettingsModal.test.tsx  SettingsModal.tsx  SftpDualBrowser.tsx  SftpTransferStatus.test.tsx  SftpTransferStatus.tsx  Sidebar.test.tsx  Sidebar.tsx  SidebarPanel.tsx  SidebarResizeHandle.tsx  (+17 more)
src/hooks/: useHotkeys.ts  useSidebarToggle.test.ts  useSidebarToggle.ts  useTheme.ts  useZoom.ts
src/lib/: base64.ts  dialog.ts  forwardEvents.ts  imeInput.test.ts  imeInput.ts  ipc.ts  sshTarget.test.ts  sshTarget.ts
src/state/: dbConnectionStore.ts  forwardStore.test.ts  forwardStore.ts  hostStore.test.ts  hostStore.ts  sessionStore.test.ts  sessionStore.ts  settingsStore.test.ts  settingsStore.ts  sftpStore.test.ts  sftpStore.ts  snippetStore.test.ts  snippetStore.ts  sshKeyStore.ts  syncStore.test.ts  syncStore.ts  tagStore.ts
src/test/: setup.ts
(+7 files in other folders)
