[package]
name = "power-term"
version = "0.0.1"
description = "A modern terminal app"
authors = ["band"]
edition = "2021"

[lib]
name = "power_term"
path = "src/lib.rs"

[[bin]]
name = "power-term"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
parking_lot = "0.12"
thiserror = "1"
dirs = "5"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
