[package]
name = "power-term"
version = "0.2.7"
description = "A modern terminal app"
authors = ["Power Term Contributors"]
repository = "https://github.com/Financial-Support/power-term"
edition = "2021"

[lib]
name = "power_term"
path = "src/lib.rs"

[[bin]]
name = "power-term"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
parking_lot = "0.12"
thiserror = "1"
dirs = "5"
russh = "0.45"
russh-keys = "0.45"
sha2 = "0.10"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "sync", "time", "fs"] }
tokio-util = { version = "0.7", features = ["compat"] }
rusqlite = { version = "0.31", features = ["bundled"] }
# keyring is configured per-platform below

russh-sftp = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
aes-gcm = "0.10"
bs58 = "0.5"
url = "2"
tokio-postgres = "0.7"
mysql_async = { version = "0.34", default-features = false, features = ["minimal"] }
tiberius = { version = "0.12.3", default-features = false, features = ["tokio", "rustls"] }

[dev-dependencies]
tempfile = "3"
mockito = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
mock-keychain = []

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }
